--- a/case1/sd_effects_txt.css
+++ b/case1/sd_effects_txt.css
@@ -6,8 +6,8 @@
    Case Problem 1
    
    Star Dust Stories Design Styles
-   Author: 
-   Date:      
+   Author: Gael Rodriguez Garcia
+   Date: 10/9/19     
 
    Filename: sd_effects.css
 
