--- a/case3/cf_effects_txt.css
+++ b/case3/cf_effects_txt.css
@@ -6,8 +6,8 @@
    Case Problem 3
    
    Design Styles for the Chupacabra Music Fest
-   Author: 
-   Date:   
+   Author: Gael Rodriguez Garcia
+   Date: 10/10/19  
    
    Filename: cf_effects.css
 
